Crash when deleting particle system modifier with the X Shortcut #78718

Closed
opened 2020-07-07 19:30:22 +02:00 by Michael Hermann · 12 comments

System Information
Operating system: Linux-5.7.5-arch1-1-x86_64-with-arch 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.82

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-06 20:39, hash: e20171e59f

Short description of error
Deleting a duplicated particle system from the modifier stack crashes Blender.
Possibly related to #74786 (?)

Exact steps for others to reproduce the error
0. load factory settings.

  1. Select the default cube and add a Particle System. (e.g. by adding a Particle System modifier)
  2. Hover the mouse over the PS-modifier in the stack and press Shift + D to duplicate.
  3. While still hovering over the modifiers, press X twice to delete both Particle System modifiers.

(This is how I can reproduce it 100% of the time. - When I discovered it, I only needed to delete one of the modifiers to cause the crash.)

**System Information** Operating system: Linux-5.7.5-arch1-1-x86_64-with-arch 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.82 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-06 20:39, hash: `e20171e59f` **Short description of error** Deleting a duplicated particle system from the modifier stack crashes Blender. Possibly related to #74786 (?) **Exact steps for others to reproduce the error** 0. load factory settings. 1. Select the default cube and add a Particle System. (e.g. by adding a Particle System modifier) 2. Hover the mouse over the PS-modifier in the stack and press Shift + D to duplicate. 3. While still hovering over the modifiers, press X twice to delete both Particle System modifiers. (This is how I can reproduce it 100% of the time. - When I discovered it, I only needed to delete one of the modifiers to cause the crash.)

Added subscriber: @MichaelHermann

Added subscriber: @MichaelHermann

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
psys_emitter_customdata_mask(ParticleSystem * psys, CustomData_MeshMasks * r_cddata_masks) Line 1953	C
requiredDataMask(Object * UNUSED_ob, ModifierData * md, CustomData_MeshMasks * r_cddata_masks) Line 104	C
BKE_modifier_calc_data_masks(Scene * scene, Object * ob, ModifierData * md, CustomData_MeshMasks * final_datamask, int required_mode, ModifierData * previewmd, const CustomData_MeshMasks * previewmask) Line 573	C
mesh_calc_modifiers(Depsgraph * depsgraph, Scene * scene, Object * ob, int useDeform, const bool need_mapping, const CustomData_MeshMasks * dataMask, const int index, const bool use_cache, const bool allow_shared_mesh, Mesh * * r_deform, Mesh * * r_final) Line 951	C
mesh_build_data(Depsgraph * depsgraph, Scene * scene, Object * ob, const CustomData_MeshMasks * dataMask, const bool need_mapping) Line 1805	C
makeDerivedMesh(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, const CustomData_MeshMasks * dataMask) Line 1920	C
BKE_object_handle_data_update(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 194	C
BKE_object_eval_uber_data(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 385	C
``` psys_emitter_customdata_mask(ParticleSystem * psys, CustomData_MeshMasks * r_cddata_masks) Line 1953 C requiredDataMask(Object * UNUSED_ob, ModifierData * md, CustomData_MeshMasks * r_cddata_masks) Line 104 C BKE_modifier_calc_data_masks(Scene * scene, Object * ob, ModifierData * md, CustomData_MeshMasks * final_datamask, int required_mode, ModifierData * previewmd, const CustomData_MeshMasks * previewmask) Line 573 C mesh_calc_modifiers(Depsgraph * depsgraph, Scene * scene, Object * ob, int useDeform, const bool need_mapping, const CustomData_MeshMasks * dataMask, const int index, const bool use_cache, const bool allow_shared_mesh, Mesh * * r_deform, Mesh * * r_final) Line 951 C mesh_build_data(Depsgraph * depsgraph, Scene * scene, Object * ob, const CustomData_MeshMasks * dataMask, const bool need_mapping) Line 1805 C makeDerivedMesh(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, const CustomData_MeshMasks * dataMask) Line 1920 C BKE_object_handle_data_update(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 194 C BKE_object_eval_uber_data(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 385 C ```

This issue was referenced by e4926c167b

This issue was referenced by e4926c167bac80297bd1808e020510ec0d17369f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-07-08 18:09:20 +02:00

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

Meh, wrong task number in commit message :(

Meh, wrong task number in commit message :(

Well, basically copying code is doing everything wrong it can do for that modifier... TBH particle system modifier is a weirdo, always needs its own custom handling.

Well, basically copying code is doing everything wrong it can do for that modifier... TBH particle system modifier is a weirdo, always needs its own custom handling.

This has nothing to do with #data_assets_i_o project really, just bad code in handling of that modifier/psys.

Fix incoming.

This has nothing to do with #data_assets_i_o project really, just bad code in handling of that modifier/psys. Fix incoming.

This issue was referenced by 8ddf7556a5

This issue was referenced by 8ddf7556a512b2b2ce89b75c9660e01a7aba8675

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78718
No description provided.